--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
   <div class="container" id="imageContainer">
-    <!-- First image  -->
-    <img src="images/1x.png" class="top" alt="Ducks Zoom Out">
-    <!-- Second image  -->
-    <img src="images/2x.png" class="bottom" alt="Ducks Zoom In">
+    <!-- First image (raw GitHub URL) -->
+    <img src="https://raw.githubusercontent.com/your-username/your-repo/main/1x.png" class="top" alt="Ducks Zoom Out">
+    <!-- Second image (raw GitHub URL) -->
+    <img src="https://raw.githubusercontent.com/your-username/your-repo/main/2x.png" class="bottom" alt="Ducks Zoom In">
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
