--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <div class="container" id="imageContainer">
     <!-- First image (raw GitHub URL) -->
-    <img src="https://raw.githubusercontent.com/TrainGK/Zoom.Camera/main/1x.png" class="top" alt="Ducks Zoom Out">
+    <img src="https://github.com/TrainGK/Zoom.Camera/blob/main/1x.png" class="top" alt="Ducks Zoom Out">
     <!-- Second image (raw GitHub URL) -->
-    <img src="https://raw.githubusercontent.com/TrainGK/Zoom.Camera/main/2x.png" class="bottom" alt="Ducks Zoom In">
+    <img src="https://github.com/TrainGK/Zoom.Camera/blob/main/2x.png" class="bottom" alt="Ducks Zoom In">
   </div>
 
   <script src="script.js"></script>
